--- a/mobile/index.html
+++ b/mobile/index.html
@@ -206,7 +206,7 @@ session_start();
         <section class="movie">
             <h3>월미테마파크 MOVIE</h3>
             <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/6JMhNFseJMM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/6JMhNFseJMM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
         <section class="enjoy">
