--- a/sub3/sub3_1.html
+++ b/sub3/sub3_1.html
@@ -222,17 +222,17 @@ session_start();
                     <h3>VR 게임존</h3>
                     <ul>
                         <li><img src="./images/content1/VR_img01.jpg" alt="">
-                            <a href="#dialog7">
+                            <a href="#">
                                 <p>VR게임존</p>
                             </a>
                         </li>
                         <li><img src="./images/content1/VR_img02.jpg" alt="">
-                            <a href="#dialog8">
+                            <a href="#">
                                 <p>레이싱 게임</p>
                             </a>
                         </li>
                         <li><img src="./images/content1/VR_img03.jpg" alt="">
-                            <a href="#dialog9">
+                            <a href="#">
                                 <p>슈팅 게임</p>
                             </a>
                         </li>
@@ -245,17 +245,17 @@ session_start();
                     <h3>차피패밀리파크</h3>
                     <ul>
                         <li><img src="./images/content1/cha_img01.jpg" alt="">
-                            <a href="#dialog10">
+                            <a href="#">
                                 <p>카트레이싱존</p>
                             </a>
                         </li>
                         <li><img src="./images/content1/cha_img02.jpg" alt="">
-                            <a href="#dialog11">
+                            <a href="#">
                                 <p>볼배틀존</p>
                             </a>
                         </li>
                         <li><img src="./images/content1/cha_img03.jpg" alt="">
-                            <a href="#dialog12">
+                            <a href="#">
                                 <p>해적놀이터</p>
                             </a>
                         </li>
